--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "test": "jest --watchAll"
+    "testWatch": "jest --watchAll",
+    "test": "jest"
   },
   "author": "@emiliort",
   "license": "ISC",
