--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "lamaquinadecafe",
   "version": "1.0.0",
   "description": "Proyecto TDD",
-  "main": "index.js",
+  "main": "./src/main.ts",
   "scripts": {
+    "start": "ts-node ./src/main.ts",
+    "start-js": "npm run build && node ./dist/main.js",
     "build": "tsc",
     "testWatch": "jest --watchAll",
     "test": "jest"
@@ -11,9 +13,15 @@
   "author": "@emiliort",
   "license": "ISC",
   "devDependencies": {
+    "@types/inquirer": "^7.3.1",
     "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.37",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.4",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
+  },
+  "dependencies": {
+    "inquirer": "^8.0.0"
   }
 }
